# riirc

./: .gitignore  Cargo.toml
src/: main.rs
src/irc/: codec.rs  mod.rs  proto.rs  transport.rs
