[package]
name = "riirc"
version = "0.1.0"
authors = ["Alex Brooke <akb.sbc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
futures  = "0.3.4"
log = "0.4.8"
num_enum = "0.4.3"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
